feat: 바이너리 컨텐츠 CRUD 로직 구현