@@ -67,6 +67,7 @@ dependencies {
 test {
     useJUnitPlatform()
     finalizedBy jacocoTestReport
+    jvmArgs '-XX:+EnableDynamicAgentLoading'
 }
 
 jacocoTestReport {
